Bug 344501 - Note widget text disappears on selection change
Summary: Note widget text disappears on selection change
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks: 345265
  Show dependency treegraph
 
Reported: 2015-02-23 19:37 UTC by Ralf Habacker
Modified: 2015-06-18 15:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.80 (KDE 15.3.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-02-23 19:37:44 UTC
With commit 05eb88115733134eb2953d6fa48afce3b6ab4062 a regression has been introduced, which erases the text of a note widget after changing the selection from the note widget to the related diagram or to other widgets.


Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. add note widget
3. double click on note widget, enter text and save
4. resize note widget so you can see the text
5. select class diagram or another widget

Actual Results:  
The text in the note widget disappears.

Expected Results:  
The text should not disappear
Comment 1 Ralf Habacker 2015-02-28 21:36:15 UTC
Git commit eb929df31389b2adc50818098d833560e5bc43e2 by Ralf Habacker.
Committed on 28/02/2015 at 19:08.
Pushed by habacker into branch 'master'.

Fix bug 'Note widget text disappears on selection change (edit)'.

The NoteWidget properties dialog has been refactored to keep api in sync
with other widgets dialogs.
FIXED-IN:2.15.80 (KDE 14.12.80)

M  +1    -0    umbrello/CMakeLists.txt
A  +59   -0    umbrello/dialogs/notedialog.cpp     [License: GPL (v2+)]
A  +39   -0    umbrello/dialogs/notedialog.h     [License: GPL (v2+)]
M  +13   -11   umbrello/widgets/notewidget.cpp
M  +2    -2    umbrello/widgets/notewidget.h

http://commits.kde.org/umbrello/eb929df31389b2adc50818098d833560e5bc43e2