Fix bug 'Note widget text disappears on selection change (edit)'.

The NoteWidget properties dialog has been refactored to keep api in sync
with other widgets dialogs.

BUG:344501
FIXED-IN:2.15.80 (KDE 14.12.80)